--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script src="https://kit.fontawesome.com/e9868889b4.js" crossorigin="anonymous"></script>
 </html>
